FIXED THE SMALL PRODUCTION IMAGES BUG ON HOMEPAGE
The pictures and icon were both being targeted by our .img in css which
made the production posters have the same css as the icon in our
navigation bar which was too small.

Now the production images are clearer and back to the size they should be.

--- a/public/mainstyle.css
+++ b/public/mainstyle.css
@@ -171,13 +171,11 @@ nav {
   margin-right: 25%;
 }
 
-img {
+.ShoppingCart > img {
   display: block;
   width:35px;
   height:35px
 }
-
-
 
 .logo {
 
